--- a/package.json
+++ b/package.json
@@ -11,13 +11,42 @@
     "email:dev": "email dev"
   },
   "dependencies": {
+    "@mantine/carousel": "^7.12.0",
+    "@mantine/charts": "^7.12.0",
+    "@mantine/code-highlight": "^7.12.0",
+    "@mantine/core": "^7.12.0",
+    "@mantine/dates": "^7.12.0",
+    "@mantine/dropzone": "^7.12.0",
+    "@mantine/form": "^7.12.0",
+    "@mantine/hooks": "^7.12.0",
+    "@mantine/modals": "^7.12.0",
+    "@mantine/notifications": "^7.12.0",
+    "@mantine/nprogress": "^7.12.0",
+    "@mantine/spotlight": "^7.12.0",
+    "@mantine/tiptap": "^7.12.0",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-icons": "^1.3.0",
     "@react-email/components": "0.0.22",
+    "@tabler/icons-react": "^3.11.0",
+    "@tanstack/react-query": "^5.51.21",
+    "@tiptap/extension-link": "^2.5.9",
+    "@tiptap/react": "^2.5.9",
+    "@tiptap/starter-kit": "^2.5.9",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "dayjs": "^1.11.12",
+    "embla-carousel-react": "^8.1.8",
+    "lucide-react": "^0.424.0",
+    "mantine-react-table": "^2.0.0-beta.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-email": "2.1.6",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
-    "react-router-dom": "^6.25.1"
+    "react-router-dom": "^6.25.1",
+    "recharts": "^2.12.7",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^22.0.0",
@@ -31,6 +60,7 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "postcss": "^8.4.40",
+    "postcss-preset-mantine": "^1.17.0",
     "tailwindcss": "^3.4.7",
     "typescript": "^5.2.2",
     "vite": "^5.3.4"
