--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@tiptap/extension-link": "^2.5.9",
     "@tiptap/react": "^2.5.9",
     "@tiptap/starter-kit": "^2.5.9",
+    "chart.js": "^4.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.12",
@@ -39,6 +40,7 @@
     "lucide-react": "^0.424.0",
     "mantine-react-table": "^2.0.0-beta.6",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-email": "2.1.6",
     "react-hot-toast": "^2.4.1",
