--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "email:dev": "email dev"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@fontsource/roboto": "^5.0.14",
     "@mantine/carousel": "^7.12.0",
     "@mantine/charts": "^7.12.0",
     "@mantine/code-highlight": "^7.12.0",
@@ -24,11 +27,20 @@
     "@mantine/nprogress": "^7.12.0",
     "@mantine/spotlight": "^7.12.0",
     "@mantine/tiptap": "^7.12.0",
+    "@mui/icons-material": "^6.0.1",
+    "@mui/material": "^6.0.1",
+    "@mui/x-charts": "^7.15.0",
+    "@mui/x-data-grid": "^7.15.0",
+    "@mui/x-data-grid-pro": "^7.15.0",
+    "@mui/x-date-pickers": "^7.15.0",
+    "@mui/x-date-pickers-pro": "^7.15.0",
+    "@mui/x-tree-view": "^7.15.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@react-email/components": "0.0.22",
     "@tabler/icons-react": "^3.11.0",
-    "@tanstack/react-query": "^5.51.21",
+    "@tanstack/react-form": "^0.31.0",
+    "@tanstack/react-query": "^5.53.1",
     "@tiptap/extension-link": "^2.5.9",
     "@tiptap/react": "^2.5.9",
     "@tiptap/starter-kit": "^2.5.9",
