--- a/package.json
+++ b/package.json
@@ -40,10 +40,11 @@
     "@react-email/components": "0.0.22",
     "@tabler/icons-react": "^3.11.0",
     "@tanstack/react-form": "^0.31.0",
-    "@tanstack/react-query": "^5.53.1",
+    "@tanstack/react-query": "^5.54.1",
     "@tiptap/extension-link": "^2.5.9",
     "@tiptap/react": "^2.5.9",
     "@tiptap/starter-kit": "^2.5.9",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.12",
