--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "embla-carousel-react": "^8.1.8",
     "lucide-react": "^0.424.0",
     "mantine-react-table": "^2.0.0-beta.6",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-email": "2.1.6",
