--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,38 +27,40 @@ jobs:
       - name: Log in to GitHub Docker registry
         run: echo "${{ secrets.GHCR_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
-      - name: Install Docker Compose
-        run: |
-          sudo curl -L "https://github.com/docker/compose/releases/download/v2.17.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-          sudo chmod +x /usr/local/bin/docker-compose
-          docker-compose --version
-
       - name: Pull ASP.NET CORE and Database Docker Images
         run: |
           docker pull ghcr.io/filipzytka/hermes.server:latest
           docker pull ghcr.io/filipzytka/postgres:latest
 
-      - name: Start Backend and Database with Docker Compose
+      - name: Start Postgres Container
         run: |
-          echo "Starting backend and database services..."
-          docker-compose up -d
-        env:
-          POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
-          POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
-          POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
-          ENVIRONMENT: ${{ secrets.ENVIRONMENT }}
-          CONNECTION_STRING: Host=hermes.database;Database=${{ secrets.POSTGRES_DB }};Username=${{ secrets.POSTGRES_USER }};Password=${{ secrets.POSTGRES_PASSWORD }}
-          TEST_CONNECTION_STRING: Host=hermes.database;Port=5432;Database=${{ secrets.TEST_POSTGRES_DB }};Username=${{ secrets.POSTGRES_USER }};Password=${{ secrets.POSTGRES_PASSWORD }}
-          TEST_POSTGRES_DB: ${{ secrets.TEST_POSTGRES_DB }}
-          SMTP_SERVER: ${{ secrets.SMTP_SERVER }}
-          PORT: ${{ secrets.PORT }}
-          EMAIL_SENDER_USERNAME: ${{ secrets.EMAIL_SENDER_USERNAME }}
-          EMAIL_SENDER_PASSWORD: ${{ secrets.EMAIL_SENDER_PASSWORD }}
-          REACT_CLIENT_URL: ${{ secrets.REACT_CLIENT_URL }}
-          ADMIN_EMAIL: ${{ secrets.ADMIN_EMAIL }}
-          ALARM_EMAIL: ${{ secrets.ALARM_EMAIL }}
-          ADMIN_PASSWORD: ${{ secrets.ADMIN_PASSWORD }}
-          CYPRESS_VALIDATION_TOKEN: ${{ secrets.CYPRESS_VALIDATION_TOKEN }}
+          docker run -d \
+          --name hermes.database \
+          -e POSTGRES_DB=${{ secrets.POSTGRES_DB }} \
+          -e POSTGRES_USER=${{ secrets.POSTGRES_USER }} \
+          -e POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} \
+          -p 5432:5432 \
+          ghcr.io/filipzytka/postgres:latest
+
+      - name: Start ASP.NET Core Container
+        run: |
+          docker run -d \
+          --name hermes.server \
+          -e ENVIRONMENT=${{ secrets.ENVIRONMENT }} \
+          -e CONNECTION_STRING="Host=hermes.database;Database=${{ secrets.POSTGRES_DB }};Username=${{ secrets.POSTGRES_USER }};Password=${{ secrets.POSTGRES_PASSWORD }}" \
+          -e TEST_CONNECTION_STRING="Host=hermes.database;Port=5432;Database=${{ secrets.TEST_POSTGRES_DB }};Username=${{ secrets.POSTGRES_USER }};Password=${{ secrets.POSTGRES_PASSWORD }}" \
+          -e TEST_POSTGRES_DB=${{ secrets.TEST_POSTGRES_DB }} \
+          -e SMTP_SERVER=${{ secrets.SMTP_SERVER }} \
+          -e PORT=${{ secrets.PORT }} \
+          -e EMAIL_SENDER_USERNAME=${{ secrets.EMAIL_SENDER_USERNAME }} \
+          -e EMAIL_SENDER_PASSWORD=${{ secrets.EMAIL_SENDER_PASSWORD }} \
+          -e REACT_CLIENT_URL=${{ secrets.REACT_CLIENT_URL }} \
+          -e ADMIN_EMAIL=${{ secrets.ADMIN_EMAIL }} \
+          -e ALARM_EMAIL=${{ secrets.ALARM_EMAIL }} \
+          -e ADMIN_PASSWORD=${{ secrets.ADMIN_PASSWORD }} \
+          -e CYPRESS_VALIDATION_TOKEN=${{ secrets.CYPRESS_VALIDATION_TOKEN }} \
+          -p 8080:8080 \
+          ghcr.io/filipzytka/hermes.server:latest
 
       - name: Cypress
         uses: cypress-io/github-action@v6.5.0
