--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -32,35 +32,41 @@ jobs:
           docker pull ghcr.io/filipzytka/hermes.server:latest
           docker pull ghcr.io/filipzytka/postgres:latest
 
+      - name: Create Docker Network
+        run: |
+          docker network create hermes-network
+
       - name: Start Postgres Container
         run: |
           docker run -d \
           --name postgres \
+          --network hermes-network \
           -e POSTGRES_DB=${{ secrets.POSTGRES_DB }} \
           -e POSTGRES_USER=${{ secrets.POSTGRES_USER }} \
           -e POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} \
           -p 5432:5432 \
           ghcr.io/filipzytka/postgres:latest
 
-      # - name: Start ASP.NET Core Container
-      #   run: |
-      #     docker run -d \
-      #     --name hermes.server \
-      #     -e ENVIRONMENT=${{ secrets.ENVIRONMENT }} \
-      #     -e CONNECTION_STRING="Host=hermes.database;Database=${{ secrets.POSTGRES_DB }};Username=${{ secrets.POSTGRES_USER }};Password=${{ secrets.POSTGRES_PASSWORD }}" \
-      #     -e TEST_CONNECTION_STRING="Host=hermes.database;Port=5432;Database=${{ secrets.TEST_POSTGRES_DB }};Username=${{ secrets.POSTGRES_USER }};Password=${{ secrets.POSTGRES_PASSWORD }}" \
-      #     -e TEST_POSTGRES_DB=${{ secrets.TEST_POSTGRES_DB }} \
-      #     -e SMTP_SERVER=${{ secrets.SMTP_SERVER }} \
-      #     -e PORT=${{ secrets.PORT }} \
-      #     -e EMAIL_SENDER_USERNAME=${{ secrets.EMAIL_SENDER_USERNAME }} \
-      #     -e EMAIL_SENDER_PASSWORD=${{ secrets.EMAIL_SENDER_PASSWORD }} \
-      #     -e REACT_CLIENT_URL=${{ secrets.REACT_CLIENT_URL }} \
-      #     -e ADMIN_EMAIL=${{ secrets.ADMIN_EMAIL }} \
-      #     -e ALARM_EMAIL=${{ secrets.ALARM_EMAIL }} \
-      #     -e ADMIN_PASSWORD=${{ secrets.ADMIN_PASSWORD }} \
-      #     -e CYPRESS_VALIDATION_TOKEN=${{ secrets.CYPRESS_VALIDATION_TOKEN }} \
-      #     -p 8080:8080 \
-      #     ghcr.io/filipzytka/hermes.server:latest
+      - name: Start ASP.NET Core Container
+        run: |
+          docker run -d \
+          --name hermes.server \
+          --network hermes-network \
+          -e ENVIRONMENT=${{ secrets.ENVIRONMENT }} \
+          -e CONNECTION_STRING="Host=hermes.database;Database=${{ secrets.POSTGRES_DB }};Username=${{ secrets.POSTGRES_USER }};Password=${{ secrets.POSTGRES_PASSWORD }}" \
+          -e TEST_CONNECTION_STRING="Host=hermes.database;Port=5432;Database=${{ secrets.TEST_POSTGRES_DB }};Username=${{ secrets.POSTGRES_USER }};Password=${{ secrets.POSTGRES_PASSWORD }}" \
+          -e TEST_POSTGRES_DB=${{ secrets.TEST_POSTGRES_DB }} \
+          -e SMTP_SERVER=${{ secrets.SMTP_SERVER }} \
+          -e PORT=${{ secrets.PORT }} \
+          -e EMAIL_SENDER_USERNAME=${{ secrets.EMAIL_SENDER_USERNAME }} \
+          -e EMAIL_SENDER_PASSWORD=${{ secrets.EMAIL_SENDER_PASSWORD }} \
+          -e REACT_CLIENT_URL=${{ secrets.REACT_CLIENT_URL }} \
+          -e ADMIN_EMAIL=${{ secrets.ADMIN_EMAIL }} \
+          -e ALARM_EMAIL=${{ secrets.ALARM_EMAIL }} \
+          -e ADMIN_PASSWORD=${{ secrets.ADMIN_PASSWORD }} \
+          -e CYPRESS_VALIDATION_TOKEN=${{ secrets.CYPRESS_VALIDATION_TOKEN }} \
+          -p 8080:8080 \
+          ghcr.io/filipzytka/hermes.server:latest
 
       - name: Cypress
         uses: cypress-io/github-action@v6.5.0
