--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -45,7 +45,7 @@ jobs:
             -e POSTGRES_USER=${{ secrets.POSTGRES_USER }} \
             -e POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} \
             -p 5432:5432 \
-            ghcr.io/filipzytka/postgres:latest
+            ghcr.io/filipzytka/postgres
 
       - name: Start ASP.NET Core Container
         run: |
@@ -66,7 +66,7 @@ jobs:
             -e ADMIN_PASSWORD=${{ secrets.ADMIN_PASSWORD }} \
             -e CYPRESS_VALIDATION_TOKEN=${{ secrets.CYPRESS_VALIDATION_TOKEN }} \
             -p 8080:8080 \
-            ghcr.io/filipzytka/hermes.server:latest
+            ghcr.io/filipzytka/hermes.server
 
       - name: Cypress
         uses: cypress-io/github-action@v6.5.0
