--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -27,10 +27,11 @@ jobs:
       - name: Log in to GitHub Docker registry
         run: echo "${{ secrets.GHCR_TOKEN }}" | docker login ghcr.io -u filipzytka --password-stdin
 
-      - name: Pull ASP.NET CORE and Database Docker Images
-        run: |
-          docker pull ghcr.io/filipzytka/hermes.server:latest 
-          docker pull ghcr.io/filipzytka/postgres:latest
+      - name: Pull Database Docker Image from Github packages
+        run: docker pull ghcr.io/filipzytka/postgres:latest
+
+      - name: Pull ASP.NET CORE Image from Github packages
+        run: docker pull ghcr.io/filipzytka/hermes.server:latest
 
       - name: Create Docker Network
         run: |
