--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,3 +63,4 @@ jobs:
           CYPRESS_PASSWORD: ${{secrets.CYPRESS_PASSWORD}}
         with:
           start: npm run dev
+          run-tests: "signin.cy.ts"
