--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -47,6 +47,10 @@ jobs:
             -p 5432:5432 \
             ghcr.io/filipzytka/postgres:latest
 
+      - name: Sleep for 50 seconds
+        run: sleep 50s
+        shell: bash
+
       - name: Start ASP.NET Core Container
         run: |
           docker run \
