--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -38,7 +38,7 @@ jobs:
 
       - name: Start Postgres Container
         run: |
-          docker run -d \
+          docker run \
             --name postgres \
             --network hermes-network \
             -e POSTGRES_DB="${{ secrets.POSTGRES_DB }}" \
@@ -47,9 +47,9 @@ jobs:
             -p 5432:5432 \
             ghcr.io/filipzytka/postgres:latest
 
-      # - name: Sleep for 50 seconds
-      #   run: sleep 50s
-      #   shell: bash
+      - name: Sleep for 50 seconds
+        run: sleep 50s
+        shell: bash
 
       - name: Start ASP.NET Core Container
         run: |
