--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -79,6 +79,9 @@ jobs:
         run: sleep 50s
         shell: bash
 
+      - name: Curl
+        run: -f http://localhost:8080/api/auth/check
+
       - name: Check lifetime of Docker containers
         run: docker ps
 
