--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -80,7 +80,7 @@ jobs:
         shell: bash
 
       - name: Curl
-        run: -f http://localhost:8080/api/auth/check
+        run: curl -f http://localhost:8080/api/auth/check
 
       - name: Check lifetime of Docker containers
         run: docker ps
