--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -47,8 +47,8 @@ jobs:
             -p 5432:5432 \
             ghcr.io/filipzytka/postgres:latest
 
-      - name: Sleep for 50 seconds
-        run: sleep 50s
+      - name: Sleep for 20 seconds
+        run: sleep 20s
         shell: bash
 
       - name: Start ASP.NET Core Container
@@ -75,8 +75,8 @@ jobs:
       - name: Check lifetime of Docker containers
         run: docker ps
 
-      - name: Sleep for 50 seconds
-        run: sleep 50s
+      - name: Sleep for 15 seconds
+        run: sleep 15s
         shell: bash
 
       - name: curl login
@@ -88,8 +88,12 @@ jobs:
             "password": "Root12345"
           }'
 
-      - name: Check lifetime of Docker containers
-        run: docker ps
+      - name: Run React app
+        run: npm run dev
+
+      - name: Sleep for 10 seconds
+        run: sleep 10s
+        shell: bash
 
       - name: Cypress
         uses: cypress-io/github-action@v6.5.0
@@ -103,4 +107,4 @@ jobs:
           CYPRESS_TEST_EMAIL: ${{ secrets.CYPRESS_TEST_EMAIL }}
           CYPRESS_TEST_TOKEN: ${{ secrets.CYPRESS_TEST_TOKEN }}
         with:
-          start: npm run dev
+          start:
