--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -88,6 +88,9 @@ jobs:
       - name: Build project
         run: npm run build
 
+      - name: Wait for React app to be available
+        run: npx wait-on http://localhost:5173
+
       - name: Cypress
         uses: cypress-io/github-action@v6.5.0
         env:
