--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -100,6 +100,7 @@ jobs:
           CYPRESS_PASSWORD: ${{ secrets.CYPRESS_PASSWORD }}
           CYPRESS_INV_EMAIL: "${{ secrets.CYPRESS_INV_EMAIL }}"
           CYPRESS_CLIENT_URL: "${{ secrets.CYPRESS_CLIENT_URL }}"
+          CYPRESS_SERVER_URL: "${{ secrets.CYPRESS_SERVER_URL }}"
           CYPRESS_TEST_EMAIL: "${{ secrets.CYPRESS_TEST_EMAIL }}"
           CYPRESS_TEST_TOKEN: "${{ secrets.CYPRESS_TEST_TOKEN }}"
         with:
