--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -100,3 +100,4 @@ jobs:
           CYPRESS_TEST_TOKEN: "${{ secrets.CYPRESS_TEST_TOKEN }}"
         with:
           start: npm run dev
+          wait-on: "http://localhost:5173"
