--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -99,5 +99,5 @@ jobs:
           CYPRESS_TEST_EMAIL: "${{ secrets.CYPRESS_TEST_EMAIL }}"
           CYPRESS_TEST_TOKEN: "${{ secrets.CYPRESS_TEST_TOKEN }}"
         with:
-          start: npm run dev
+          start: npx vite --host
           wait-on: "http://localhost:5173"
