--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -102,3 +102,10 @@ jobs:
         with:
           start: npx vite --host
           wait-on: "http://localhost:5173"
+
+      - name: upload screenshots
+        uses: actions/upload-artifact@v1
+        if: always()
+        with:
+          name: cypress-screenshots
+          path: cypress/screenshots
