--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -88,7 +88,7 @@ jobs:
       - name: Build project
         run: npm run build
         env:
-          VITE_SERVER_URL: "${{ secrets.VITE_SERVER_URL }}""
+          VITE_SERVER_URL: "${{ secrets.VITE_SERVER_URL }}"
           VITE_CLIENT_URL: "${{ secrets.VITE_CLIENT_URL }}"
 
       - name: Cypress
