--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -67,6 +67,10 @@ jobs:
         run: sleep 15s
         shell: bash
 
+      - name: curl token
+        run: |
+          curl -X GET "http://localhost:8080/api/invite/validate?token=testaf1e-eb62-4e3c-ac02-f0ab3fc66674"
+
       - uses: actions/checkout@v2
       - name: Setup Node
         uses: actions/setup-node@v4.0.3
