--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -19,7 +19,7 @@ jobs:
         run: docker pull ghcr.io/filipzytka/postgres:latest
 
       - name: Pull ASP.NET CORE Image from Github packages
-        run: docker pull ghcr.io/filipzytka/hermes.server:latest
+        run: docker pull ghcr.io/filipzytka/hermes:latest
 
       - name: Create Docker Network
         run: docker network create hermes-network
@@ -67,9 +67,18 @@ jobs:
         run: sleep 15s
         shell: bash
 
-      - name: curl token
+      - name: curl token xd
         run: |
           curl -X GET "http://localhost:8080/api/invite/validate?token=testaf1e-eb62-4e3c-ac02-f0ab3fc66674"
+
+      - name: curl login xd
+        run: |
+          curl -X POST "http://localhost:8080/api/auth/login" \
+          -H "Content-Type: application/json" \
+          -d '{
+            "email": "admin@mail.com",
+            "password": "Root12345"
+          }'
 
       - uses: actions/checkout@v2
       - name: Setup Node
