--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,6 +73,9 @@ jobs:
       - name: Build React App
         run: npm run build
 
+      - name: Check lifetime of Docker containers
+        run: docker ps
+
       - name: Cypress
         uses: cypress-io/github-action@v6.5.0
         env:
