--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,6 +73,10 @@ jobs:
       - name: Build React App
         run: npm run build
 
+      - name: Sleep for 15 seconds
+        run: sleep 15s
+        shell: bash
+
       - name: Check lifetime of Docker containers
         run: docker ps
 
