--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,11 +12,14 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
-      - name: Pull Postgres Docker Image
-        run: docker pull postgres:latest
+      - name: Log in to GitHub Docker registry
+        run: echo "${{ secrets.GHCR_TOKEN }}" | docker login ghcr.io -u filipzytka --password-stdin
 
-      - name: Pull ASP.NET CORE Application Image from Docker repository
-        run: docker pull filipus01/hermes:latest
+      - name: Pull Database Docker Image from Github packages
+        run: docker pull ghcr.io/filipzytka/postgres:latest
+
+      - name: Pull ASP.NET CORE Image from Github packages
+        run: docker pull docker.io/filipus01/hermes
 
       - name: Create Docker Network
         run: docker network create hermes-network
@@ -30,10 +33,10 @@ jobs:
             -e POSTGRES_USER="${{ secrets.POSTGRES_USER }}" \
             -e POSTGRES_PASSWORD="${{ secrets.POSTGRES_PASSWORD }}" \
             -p 5432:5432 \
-            postgres:latest
+            ghcr.io/filipzytka/postgres:latest
 
-      - name: Sleep for 50 seconds
-        run: sleep 10s
+      - name: Sleep for 20 seconds
+        run: sleep 20s
         shell: bash
 
       - name: Start ASP.NET Core Container
@@ -55,10 +58,14 @@ jobs:
             -e ADMIN_PASSWORD="${{ secrets.ADMIN_PASSWORD }}" \
             -e VALIDATION_TOKEN="${{ secrets.VALIDATION_TOKEN }}" \
             -p 8080:8080 \
-            filipus01/hermes:latest
+            docker.io/filipus01/hermes
 
       - name: Check lifetime of Docker containers
         run: docker ps
+
+      - name: Sleep for 15 seconds
+        run: sleep 15s
+        shell: bash
 
       - uses: actions/checkout@v2
       - name: Setup Node
@@ -71,11 +78,6 @@ jobs:
 
       - name: Build React App
         run: npm run build
-
-      - name: Check lifetime of Docker containers
-        run: |
-          docker ps -a 
-          docker logs hermes.server
 
       - name: Cypress
         uses: cypress-io/github-action@v6.5.0
