--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
         run: docker pull ghcr.io/filipzytka/postgres:latest
 
       - name: Pull ASP.NET CORE Image from Github packages
-        run: docker pull docker.io/filipus01/hermes
+        run: docker pull ghcr.io/filipzytka/hermes:latest
 
       - name: Create Docker Network
         run: docker network create hermes-network
@@ -35,8 +35,12 @@ jobs:
             -p 5432:5432 \
             ghcr.io/filipzytka/postgres:latest
 
-      - name: Sleep for 20 seconds
-        run: sleep 20s
+      - name: Wait for PostgreSQL to be available
+        run: |
+          until netstat -nlpt | grep :5432; do
+            echo "Waiting for PostgreSQL to be available..."
+            sleep 1
+          done
         shell: bash
 
       - name: Start ASP.NET Core Container
@@ -58,7 +62,7 @@ jobs:
             -e ADMIN_PASSWORD="${{ secrets.ADMIN_PASSWORD }}" \
             -e VALIDATION_TOKEN="${{ secrets.VALIDATION_TOKEN }}" \
             -p 8080:8080 \
-            docker.io/filipus01/hermes
+            ghcr.io/filipzytka/hermes:latest
 
       - name: Check lifetime of Docker containers
         run: docker ps
