--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Wait for PostgreSQL to be available
         run: |
-          until netstat -nlpt | grep :5432; do
+          until docker exec postgres pg_isready -U ${{ secrets.POSTGRES_USER }}; do
             echo "Waiting for PostgreSQL to be available..."
             sleep 1
           done
@@ -66,7 +66,7 @@ jobs:
 
       - name: Wait for ASP.NET Backend to be available
         run: |
-          until netstat -nlpt | grep :8080; do
+          until docker exec hermes.server curl -s http://localhost:8080; do
             echo "Waiting for ASP.NET Backend to be available..."
             sleep 1
           done
