--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,10 +35,10 @@ jobs:
             -p 5432:5432 \
             postgres:latest
 
-      - name: Wait for PostgreSQL to be available
+      - name: Wait for Postgres to be available
         run: |
-          until netstat -nlpt | grep :5432; do
-            echo "Waiting for PostgreSQL to be available..."
+          until docker exec postgres pg_isready -h localhost -p 5432; do
+            echo "Waiting for Postgres to be available..."
             sleep 1
           done
         shell: bash
@@ -66,7 +66,7 @@ jobs:
 
       - name: Wait for ASP.NET Backend to be available
         run: |
-          until netstat -nlpt | grep :8080; do
+          until curl -s http://localhost:8080; do
             echo "Waiting for ASP.NET Backend to be available..."
             sleep 1
           done
