--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,6 +66,8 @@ jobs:
 
       - name: Wait for ASP.NET Backend to be available
         run: |
+          docker ps -a
+          docker logs hermes.server
           until curl -s http://localhost:8080; do
             echo "Waiting for ASP.NET Backend to be available..."
             sleep 1
