--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
 
       - name: Start ASP.NET Core Container
         run: |
-          docker run -d \
+          docker run  \
             --name hermes.server \
             --network hermes-network \
             -e ENVIRONMENT="${{ secrets.ENVIRONMENT }}" \
@@ -68,7 +68,7 @@ jobs:
         run: |
           docker ps -a
           docker logs hermes.server
-          until curl -s http://hermes.server:8080; do
+          until curl -s http://localhost:8080; do
             echo "Waiting for ASP.NET Backend to be available..."
             sleep 1
           done
