--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
         run: echo "${{ secrets.GHCR_TOKEN }}" | docker login ghcr.io -u filipzytka --password-stdin
 
       - name: Pull Postgres Docker Image
-        run: docker pull postgres:latest
+        run: docker pull postgres:16
 
       - name: Pull ASP.NET CORE Image from Github packages
         run: docker pull ghcr.io/filipzytka/hermes:latest
@@ -33,7 +33,7 @@ jobs:
             -e POSTGRES_USER="${{ secrets.POSTGRES_USER }}" \
             -e POSTGRES_PASSWORD="${{ secrets.POSTGRES_PASSWORD }}" \
             -p 5432:5432 \
-            postgres:latest
+            postgres:16
 
       - name: Wait for Postgres to be available
         run: |
@@ -45,7 +45,7 @@ jobs:
 
       - name: Start ASP.NET Core Container
         run: |
-          docker run  \
+          docker run -d \
             --name hermes.server \
             --network hermes-network \
             -e ENVIRONMENT="${{ secrets.ENVIRONMENT }}" \
@@ -66,8 +66,6 @@ jobs:
 
       - name: Wait for ASP.NET Backend to be available
         run: |
-          docker ps -a
-          docker logs hermes.server
           until curl -s http://localhost:8080; do
             echo "Waiting for ASP.NET Backend to be available..."
             sleep 1
