--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
         run: echo "${{ secrets.GHCR_TOKEN }}" | docker login ghcr.io -u filipzytka --password-stdin
 
       - name: Pull Postgres Docker Image
-        run: docker pull postgres:16
+        run: docker pull ghcr.io/filipzytka/postgres:latest
 
       - name: Pull ASP.NET CORE Image from Github packages
         run: docker pull ghcr.io/filipzytka/hermes:latest
@@ -33,13 +33,13 @@ jobs:
             -e POSTGRES_USER="${{ secrets.POSTGRES_USER }}" \
             -e POSTGRES_PASSWORD="${{ secrets.POSTGRES_PASSWORD }}" \
             -p 5432:5432 \
-            postgres:16
+            ghcr.io/filipzytka/postgres:latest
 
       - name: Wait for Postgres to be available
         run: |
           until docker exec postgres pg_isready -h localhost -p 5432; do
             echo "Waiting for Postgres to be available..."
-            sleep 20
+            sleep 1
           done
         shell: bash
 
