--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Start Postgres Container
         run: |
-          docker run  -d \
+          docker run  \
             --name postgres \
             --network hermes-network \
             -e POSTGRES_DB="${{ secrets.POSTGRES_DB }}" \
@@ -34,11 +34,6 @@ jobs:
             -e POSTGRES_PASSWORD="${{ secrets.POSTGRES_PASSWORD }}" \
             -p 5432:5432 \
             postgres:16
-
-      - name: XDDDDD
-        run: |
-          sleep 60
-        shell: bash
 
       - name: Wait for Postgres to be available
         run: |
@@ -68,14 +63,6 @@ jobs:
             -e VALIDATION_TOKEN="${{ secrets.VALIDATION_TOKEN }}" \
             -p 8080:8080 \
             ghcr.io/filipzytka/hermes:latest
-
-      - name: Wait for ASP.NET Backend to be available
-        run: |
-          until curl -s http://localhost:8080; do
-            echo "Waiting for ASP.NET Backend to be available..."
-            sleep 1
-          done
-        shell: bash
 
       - uses: actions/checkout@v2
       - name: Setup Node
